--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,10 @@ input {
 img {
 	max-width: 300px;
 }
+
+.profile_button {
+	background: yellow;
+	color: black;
+	padding: 0.5rem 1rem;
+	border-radius: 1rem;
+}
