--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,29 @@ img {
 	padding: 0.5rem 1rem;
 	border-radius: 1rem;
 }
+
+.collapsible {
+	background-color: #777;
+	color: white;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+	border-radius: 1rem 1rem 0 0;
+  }
+  
+  .active, .collapsible:hover {
+	background-color: #555;
+	
+  }
+  
+  .content {
+	padding: 0 18px;
+	display: none;
+	overflow: hidden;
+	background-color: #f1f1f1;
+	border-radius: 0 0 1rem 1rem;
+  }
