--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background: #ddd;
   margin: 1rem;
   padding: 1rem;
-  max-width: 500px;
+  max-width: 75vh;
   margin: 2rem auto;
   font-family: "Open Sans", sans-serif;
 }
@@ -37,15 +37,36 @@ img {
 	max-width: 300px;
 }
 
+
+.profile-top{
+	display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+}
+.profile-top img{
+	max-height: 40vh;
+	border-radius: 5%;
+}
+
+.profile_info{
+	display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: space-evenly;	
+}
 .profile_button {
 	background: yellow;
 	color: black;
 	padding: 0.5rem 1rem;
 	border-radius: 1rem;
-	width: 20%;
-	height: 5%;
+	border: 1px solid black;
+	margin: 0.5rem 0;
+	cursor: pointer;
+	height: 10vh;
 }
-
 .collapsible {
 	background-color: #777;
 	color: white;
